--- a/server/client/css/stylefrontpage.css
+++ b/server/client/css/stylefrontpage.css
@@ -27,6 +27,13 @@ nav{
     color:rgb(242, 106, 48);
     text-decoration: none;
 }
+
+#login a:hover{
+    text-decoration: none;
+}
+#register a:hover{
+    text-decoration: none;
+}
 /************
     SFONDO
 ************/
