--- a/server/client/css/login.css
+++ b/server/client/css/login.css
@@ -22,13 +22,15 @@ nav{
     display: table;
 }
 #link{
-    /* TODO hover dei link che fa schifo ma non riesco ad inserirlo */
     display: table-cell;
     vertical-align: middle;
     text-decoration: none;
     color:rgb(242, 106, 48);
 }
-#link, #link:hover{
+#login a:hover{
+    text-decoration: none;
+}
+#register a:hover{
     text-decoration: none;
 }
 
@@ -59,20 +61,20 @@ body{
     border-radius: 25px;
     margin: auto;
     margin-top: 10%;
-    width: 30%;
+    width: 25%;
     display: flex;
     flex-direction: column;
 }
 #emailline{
     display: flex;
     background-color: white;
-    width: 60%;
+    width: 100%;
     margin: auto;
 }
 #iconmail{
+    margin-left: 15%;
     height:  30px; 
     width:  30px; 
-    margin:  auto;
     opacity:  .20; 
     transition:  all .3s ease; 
 }
@@ -80,22 +82,22 @@ body{
     display: table-cell;
     vertical-align: middle;
     text-align: center;
-    margin-left: 10%;
     margin-top: 5%;
     color: coral;
     vertical-align: middle;
     font-size: 150%;
 }
 #emailform{
-    margin:auto;
-    width: 60%;
+    width: 50%;
     border: none;
+    margin-left: 20px;
     text-align: center;
+    border-bottom: 0.1px solid grey ;
 }
 #pswline{
     display: flex;
     background-color: white;
-    width: 60%;
+    width: 100%;
     margin: auto;
     padding:2px;
 }
@@ -103,23 +105,24 @@ body{
 #psw{
     text-align: center;
     margin-top: 2%;
-    margin-left: 10%;
     color: coral;
     vertical-align: middle;
     font-size: 150%;
 }
 #pswform{
-    margin: auto;
-    width: 60%;
+    width: 50%;
     border: none;
+    margin-left: 20px;
     text-align: center;
+    border-bottom: 0.1px solid grey ;
 }
 #iconpsw{
+    margin-left: 15%;
     height:  30px; 
     width:  30px; 
-    margin:  auto;
     opacity:  .20; 
     transition:  all .3s ease; 
+    
 }
 #bottoni{
     padding-top: 5%;
@@ -127,28 +130,33 @@ body{
     flex-direction: row;
     margin:auto;
     margin-bottom: 20px;
-    width: 60%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
 }
 
 button { 
-    width:  90%;
+    width: 50%;
+    height: 40px;
+    font-size: 12px;
+    vertical-align: middle;
     border-radius:  25px; 
-    padding:  15px 40px;
     background-color: coral; 
     color:white;
-    font-size:  14px;
-    font-weight:  500; 
     box-shadow:  0px 2px 6px -1px rgba(0,0,0,.13); 
     border:  none;
     font-size: 110%;
+    margin: auto;
   }
 
   .btn-facebook {
-    margin-left: 5px;
+    margin:auto;
+    margin-top: 10px;
     background: #3B5998;
-    border-radius:  100%; 
+    border-radius: 25px; 
     color: #fff;
-    width: 30%;
-    height: 30%;
-    font-size: 200%;
+    width: 52%;
+    height: 40px;
+    font-size: 12px;
+    vertical-align: middle;
   }
