--- a/server/client/css/style.css
+++ b/server/client/css/style.css
@@ -343,6 +343,71 @@ ITEM COMPONENT
 .img-recipe:hover{
     opacity: 0.5;
 }
+/************
+ RECIPES PAGE
+*************/
+.recipeInfo-component{
+    width: 90%;
+    height: 90%;
+    margin: auto;
+    margin-top: 20px;
+    padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.recipeInfo-conteiner{
+    display: flex;
+}
+.recipe-title{
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.recipe-left{
+    width: 30%;
+    margin-right: 10px;
+    padding: 10px;
+}
+.recipe-ingredients{
+    text-align: center;
+}
+.recipe-ingredients ul{
+    list-style: none;
+}
+.recipe-image{
+    width:100%;
+    border-radius: 20px;
+    overflow: hidden;
+}
+.recipe-image img{
+    width:100%;
+    height: auto;
+}
+
+.recipe-right{
+    width: 70%;
+    margin-left: 10px;
+}
+
+.recipe-specific{
+    display: flex;
+}
+.recipe-field{
+    margin: 10px;
+}
+.recipe-field svg{
+    height: 30px;
+}
+.recipe-source-btn{
+    margin-top: 30px;
+}
+
+.recipe-instructions{
+    margin: 20px;
+}
+.recipe-instructions li{
+    margin: 20px;
+}
 
 /************
 RESPONSIVE STUFF
