--- a/server/client/css/parties.css
+++ b/server/client/css/parties.css
@@ -1,9 +1,9 @@
-#yourparties, #otherparties {
+#bar {
     margin: 8px;
-    height: 50%;
+    height: 80px;
 }
 
-#create-party{
+#lateralbutton{
     margin-top:0.5%;
     margin-left:0.5%;
 }
@@ -28,29 +28,71 @@
     color: black;
     width: 40%;
 }
+/* ************************************ 
+            single party                    
+*************************************** */
+#barsmall {
+    margin: auto;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    height: 60px;
+    font-size: smaller;
+}
+.all{
+    padding: 3%;
+    margin: 4%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 .title{
     margin: auto;
     font-family: Arial, sans-serif;
     font-weight: bold;
-    color: coral;
+    color:coral;
     text-align: center;
-    font-size: 100px;
+    font-size: 60px;
 }
+
 .principalcontent{
-    margin-top: 2%;
-    width: 60%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 40px;
+    width: 300px;
+    height: 250px;
     font-weight: bold;
-    margin-left: 10%;
+    border-style: solid;
+    border-width: 0.3px;
+    border-color: black;
+    text-align: center;
+    
+
 }
 #about{
     font-weight: bolder;  
     text-underline-position: below;
     font-size: 30px;
-
+    padding: 2%;
 }
 
 #value{
     font-style: oblique;
     font-size: 20px;
+}
+
+.part{
+    width: 50%;
+    margin: 2%;
+}
+#it{
+    width: 200px;
+    padding: 2%;
+}
+
+.middle{
+    margin-bottom: 2%;
+}
+.aboutcontent{
+    width: 70%;
+    margin:auto;
 }
