--- a/server/client/css/style.css
+++ b/server/client/css/style.css
@@ -15,6 +15,12 @@ body{
 .bg-orange{
     background-color: coral;
 }
+.bg-lightsalmon{
+    background-color: lightsalmon;
+}
+.bg-moccasin{
+    background-color: navajowhite;
+}
 
 .fill-orange{
     fill: coral;
