--- a/server/client/css/parties.css
+++ b/server/client/css/parties.css
@@ -48,7 +48,7 @@
     margin: auto;
     font-family: Arial, sans-serif;
     font-weight: bold;
-    color:coral;
+    color:black;
     text-align: center;
     font-size: 60px;
 }
@@ -56,7 +56,7 @@
 .principalcontent{
     margin: auto;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 40px;
     width: 300px;
     height: 250px;
