--- a/server/client/css/parties.css
+++ b/server/client/css/parties.css
@@ -19,6 +19,7 @@
     margin-top: 3%;
     width: 80%;
     margin: auto;
+    margin-bottom: 3%;
     padding: 3%;
     font-size:150%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
