--- a/server/client/css/parties.css
+++ b/server/client/css/parties.css
@@ -6,6 +6,8 @@
 #lateralbutton{
     margin-top:0.5%;
     margin-left:0.5%;
+    width: 10%;
+    height: 10%;
 }
 
 .line{
@@ -28,6 +30,8 @@
 #link{
     color: black;
     width: 40%;
+    font-style: italic;
+    text-align: center;
 }
 /* ************************************ 
             single party                    
@@ -41,7 +45,10 @@
 }
 .all{
     padding: 3%;
-    margin: 4%;
+    margin-top: 2%;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 2%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -54,31 +61,31 @@
     font-size: 60px;
 }
 
-.principalcontent{
+.info{
     margin: auto;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    padding: 40px;
-    width: 300px;
-    height: 250px;
+    width: 95%;
+    padding-right: 4%;
+    padding-left: 4%;
     font-weight: bold;
-    border-style: solid;
-    border-width: 0.3px;
-    border-color: black;
-    text-align: center;
-    
-
+    display:flex;
+    padding-top: 3%;
+    padding-bottom: 2%;
+    box-shadow: 0 4px 8px 0 rgba(249, 177, 101, 0.2), 0 6px 20px 0 rgba(249, 177, 101, 0.2);
 }
-#about{
-    font-weight: bolder;  
-    text-underline-position: below;
-    font-size: 30px;
-    padding: 2%;
+.el{
+    display: flex;
+    padding-left: 4%;
+    width: 100%;
+}
+#about{  
+    padding-right: 5%;
 }
 
 #value{
-    font-style: oblique;
-    font-size: 20px;
+    font-style: italic;
+    font-size: 120%;
+    padding-left: 3%;
+    padding-right: 2%;
 }
 
 .part{
@@ -91,6 +98,7 @@
 }
 
 .middle{
+    margin-top: 2%;
     margin-bottom: 2%;
 }
 .aboutcontent{
