--- a/server/client/css/parties.css
+++ b/server/client/css/parties.css
@@ -5,11 +5,19 @@
 
 #lateralbutton{
     margin-top:0.5%;
-    margin-left:0.5%;
     width: 10%;
     height: 10%;
 }
 
+#modifybutton{
+    width: 100%;
+    height: 100%;
+    margin: 2%;
+}
+
+.parties-component{ 
+    margin: 2%;
+}
 .line{
     display: flex;
 }
@@ -44,7 +52,7 @@
     font-size: smaller;
 }
 .all{
-    padding: 3%;
+    padding: 2%;
     margin-top: 2%;
     margin-left: 4%;
     margin-right: 4%;
@@ -105,3 +113,4 @@
     width: 70%;
     margin:auto;
 }
+
