--- a/server/client/css/parties.css
+++ b/server/client/css/parties.css
@@ -9,11 +9,9 @@
     vertical-align: center;
     height: fit-content;
 }
-
 #modifybutton{
     height: 100%;
 }
-
 .parties-component{ 
     margin: 2%;
 }
@@ -44,13 +42,14 @@
             single party                    
 *************************************** */
 .barsmall {
+    margin: auto;
     margin-top: 2%;
     margin-bottom: 2%;
     height: 60px;
     font-size: smaller;
 }
 .all{
-    padding: 2%;
+    padding: 3%;
     margin-top: 2%;
     margin-left: 4%;
     margin-right: 4%;
@@ -65,6 +64,7 @@
     padding:2%;
 }
 
+
 .title{
     margin: auto;
     font-family: Arial, sans-serif;
@@ -74,7 +74,7 @@
     font-size: 60px;
 }
 
-.info{
+.info-bar{
     margin: auto;
     font-weight: bold;
     display:flex;
@@ -86,9 +86,8 @@
 }
 .el{
     display: flex;
-    vertical-align: middle;
 }
-.about{ 
+.about{  
     margin-right: 10px; 
     vertical-align: middle;
     margin-top: auto;
@@ -99,7 +98,6 @@
 .value{
     font-style: italic;
     height: fit-content;
-    vertical-align: middle;
     margin-top: auto;
     margin-bottom: auto;
 }
@@ -108,12 +106,10 @@
     width: 50%;
     margin: 2%;
 }
-.it{
-    width: 200px;
-    padding: 2%;
-}
+
 
 .middle{
+    box-sizing: border-box;
     margin-top: 2%;
     margin-bottom: 2%;
     width: 60%;
@@ -131,7 +127,6 @@
 .modtxt{
     text-align: center;
 }
-
 .part-cont{
     display: flex;
 }
@@ -140,7 +135,6 @@
     margin-bottom: 2%;
     width: 40%;
 }
-
 .quantity{
     color: red;
     padding: auto;
