--- a/server/client/css/style.css
+++ b/server/client/css/style.css
@@ -10,8 +10,6 @@ body{
     overflow-x: hidden;
 }
 
-
-
 .bg-orange{
     background-color: coral;
 }
@@ -255,7 +253,7 @@ ITEMS COMPONENT
     display: flex;
     justify-content: space-between;
     z-index: 1;
-    height: 100%;
+    height: 10vh;
     text-align: left;
     align-items: center;
     border-radius: 20px;
