--- a/server/client/css/style.css
+++ b/server/client/css/style.css
@@ -10,8 +10,6 @@ body{
     overflow-x: hidden;
 }
 
-
-
 .bg-orange{
     background-color: coral;
 }
@@ -78,6 +76,27 @@ svg{
     align-items: center;
     flex-basis: 100%;
     justify-content: space-between;
+}
+
+.profile-svg{
+    position: relative;
+}
+
+.notify{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20px;
+    width: 20px;
+    font-size: 0.5em;
+    color: white;
+    text-align: center;
+    vertical-align: middle;
+    border-radius: 50%;
+    background-color: #a42e2ef1;
+    position: absolute;
+    left:30px;
+    top:30px;
 }
 
 /************
@@ -496,27 +515,6 @@ RESPONSIVE STUFF
     nav{
         font-size: 1.6em;
     }
-    .navbar-brand{
-        margin-right: 0;
-        margin-left: 0;
-    }
-    #logo-nav{
-        width: 130px;
-    }
-    svg{
-        height: 35px;
-    }
-    .right-icon{
-        margin-right: 0px;
-    }
-    
-    .right-icon svg{
-        margin-right: 0px;
-    }
-    
-    .left-icon{
-        margin-left: 0px;
-    }
     #banner-image img{
         width: 100%;
         margin-top: 0;
@@ -542,6 +540,26 @@ RESPONSIVE STUFF
     }
 }
 @media only screen and (max-width: 880px) {
+    
+    .navbar-brand{
+        margin-right: 0;
+        margin-left: 0;
+    }
+    
+    #logo-nav{
+        width: 130px;
+    }
+    .right-icon{
+        margin-right: 0px;
+    }
+    
+    .right-icon svg{
+        margin-right: 0px;
+    }
+    
+    .left-icon{
+        margin-left: 0px;
+    }
     .partyProgram-component{
         display: block;
     }
