--- a/server/client/css/register.css
+++ b/server/client/css/register.css
@@ -65,14 +65,14 @@ body{
     margin-top: 5%;
 }
 
-#line{
+.line{
     display: flex;
     background-color: white;
     margin: auto;
     margin-top: 10%;
     width: 90%;
 }
-#txt{
+.txt{
     color: coral;
     vertical-align: middle;
     font-size: 150%;
@@ -80,7 +80,7 @@ body{
     margin-left: 0em;
 }
 
-#form{
+.form{
     margin: auto;
     width: 50%;
     border: none;
@@ -88,12 +88,20 @@ body{
     margin-left: 15px;
     border-bottom: 0.1px solid grey ;
 }
-#icon{
+.icon{
     height:  40px; 
     width:  40px; 
     margin-left: 0px;
     opacity:  .20; 
     transition:  all .3s ease; 
+}
+
+span{
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    color: red;
 }
 
 
