--- a/server/client/css/profile.css
+++ b/server/client/css/profile.css
@@ -29,19 +29,20 @@
   position: relative;
   text-align: center;
   bottom: 6px;
+  color: white;
 }
 
 .high-top {
   animation: slideInDown;
   animation-duration: 1s;
-  width: 100%;
+  width: 99%;
   text-align: center;
   height: 50px;
   display: inline-block;
   background-color: orange;
   position: relative;
-  border-color: black;
-  border: 2px solid black;
+  margin: 10px;
+  cursor: auto;
 }
 
 
@@ -50,30 +51,45 @@
 
 
 .high-left {
+  cursor: none;
   animation: slideInLeft;
   animation-duration: 1s;
     width: 20%;
     position: relative;
     height: 100%;
-    padding: 20px;
     float: left;
     background-color: white;
     border-collapse: collapse;
     border-color: black;
     border: 2px solid black;
     display: block;
+    text-align: center;
     margin: 10px;
 }
 
 
 .leftB{
   position: relative;
-  font-size: 14px;
-  float: left;
+  font-size: 18px;
   right: 20px;
   margin: 20px;
-  
+}
 
+.logout{
+  font-size: 11px;
+  color: white;
+  width: 40%;
+  margin: 20px;
+  position: relative;
+  background-color: red;
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.logout:hover{
+  outline: none;
+  text-decoration: none;
 }
 
 .middle-container {
@@ -86,10 +102,16 @@
 
 /** PROFILE INFO **/
 
+.leftInfo{
+  display: block;
+}
+
 #profilePic {
   position: relative;
   float: left;
   width: 40%;
+  height:auto;
+  margin: 50px;
 }
 
 .data{
@@ -103,8 +125,20 @@
 
 /** EDIT PROFILE **/
 
+.editB{
+  font-size: 11px;
+  color: white;
+  width: 10%;
+  margin: 20px;
+  position: relative;
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+
 .edit{
-    float: left;
+    
     height: 100%;
     background-color: white;
     border-collapse: collapse;
@@ -114,13 +148,18 @@
     margin: 10px;
     position: relative;
     height: 100%;
-    width: 40%;
+    width: 60%;
     padding: 10px;
 }
+
 .send{
-  margin: 10px;
-  width: 10%;
+  width: 30%;
+}
+
+.input{
   position: relative;
+  width: 150px;
+  margin: 10px;
 }
 /** FRIENDS **/
 
@@ -129,22 +168,41 @@
 }
 
 .friends{
-  position: relative;
   width: 10%;
+  text-align: center;
 }
 
 .bottomB{
-  position: relative;
   text-align: center;
+  width: 100px;
+  margin: auto;
 }
 
 .btn-view{
   font-size: 13px;
+  width: 50px;
+  position: relative;
 }
 
 .btn-remove{
   font-size: 10px;
+}
 
+#finfo{
+  font-weight: bold;
+}
+
+/** ADD FRIENDS **/
+
+#addFriend{
+  width: 30%;
+
+}
+
+#addFriendDiv{
+  width: 100%;
+  position: relative;
+  text-align: center;
 }
 
 /** NOTIFICATIONS **/
@@ -155,7 +213,7 @@
 }
 
 .slide {
-  animation: slideOutLeft;
+  animation: slideOutRight;
   animation-duration: 2s;
 }
 
