--- a/client/css/parties.css
+++ b/client/css/parties.css
@@ -135,10 +135,6 @@
     margin-bottom: 2%;
     width: 40%;
 }
-.quantity{
-    color: red;
-    padding: auto;
-}
 .comments-container{
     overflow: scroll;
     overflow-x:hidden ;
@@ -174,6 +170,7 @@
 .othercomm .messup{
     display: flex;
     justify-content: space-evenly;
+    margin-left:6px;
 }
 
 .messdown{
@@ -185,11 +182,11 @@
     width: 80%;
     overflow-wrap: break-word;
     margin:auto;
-    margin-top: 20px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 .name{
-    font-size: 0.9em;
+    font-size: 0.8em;
     color: peru;
 }
 .date{
