--- a/client/css/login.css
+++ b/client/css/login.css
@@ -62,6 +62,7 @@ body{
     margin: auto;
     margin-top: 10%;
     width: 25%;
+    height: 50%;
     display: flex;
     flex-direction: column;
 }
@@ -141,7 +142,7 @@ span{
     color: red;
 }
 button { 
-    width: 50%;
+    width: 180px;
     height: 40px;
     font-size: 12px;
     vertical-align: middle;
@@ -152,6 +153,7 @@ button {
     border:  none;
     font-size: 110%;
     margin: auto;
+    overflow-wrap: break-word;
   }
 
   .btn-facebook {
@@ -160,8 +162,9 @@ button {
     background: #3B5998;
     border-radius: 25px; 
     color: #fff;
-    width: 52%;
-    height: 40px;
-    font-size: 12px;
+    width: 180px;
+    height: 45px;
+    font-size: 15px;
     vertical-align: middle;
+    overflow-wrap: break-word;
   }
