--- a/client/css/login.css
+++ b/client/css/login.css
@@ -130,7 +130,7 @@ body{
     display: flex;
     flex-direction: row;
     margin:auto;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     width: 80%;
     display: flex;
     flex-direction: column;
@@ -167,4 +167,8 @@ button {
     font-size: 15px;
     vertical-align: middle;
     overflow-wrap: break-word;
+  }
+
+  .linktoregister{
+      text-align: center;
   }
