--- a/client/css/login.css
+++ b/client/css/login.css
@@ -1,41 +1,4 @@
 /************
-    NAVBAR
-*************/
-nav{
-    font-size: 2em;
-}
-#navbarNav{
-    display: flex;
-}
-#navbar-brand{
-    margin:auto;
-}
-#logo-nav{
-    width: 200px;
-}
-#login{
-    margin-right: 1%;
-    
-}
-#register{
-    margin-left: 1%;
-    display: table;
-}
-#link{
-    display: table-cell;
-    vertical-align: middle;
-    text-decoration: none;
-    color:rgb(242, 106, 48);
-}
-#login a:hover{
-    text-decoration: none;
-}
-#register a:hover{
-    text-decoration: none;
-}
-
-
-/************
     SFONDO
 ************/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
@@ -61,7 +24,7 @@ body{
     border-radius: 25px;
     margin: auto;
     margin-top: 10%;
-    width: 25%;
+    width: 30%;
     height: 50%;
     display: flex;
     flex-direction: column;
@@ -171,4 +134,33 @@ button {
 
   .linktoregister{
       text-align: center;
+  }
+
+
+  @media only screen and (max-width: 870px) {
+
+    #pan{
+        background-color: white;
+        border-radius: 25px;
+        margin: auto;
+        margin-top: 10%;
+        width: 50%;
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+    }
+  }
+
+  @media only screen and (max-width: 450px) {
+
+    #pan{
+        background-color: white;
+        border-radius: 25px;
+        margin: auto;
+        margin-top: 20%;
+        width: 80%;
+        height: 70%;
+        display: flex;
+        flex-direction: column;
+    }
   }
