--- a/client/css/parties.css
+++ b/client/css/parties.css
@@ -224,4 +224,20 @@
     .info-bar{
         display: block;
     }
+    .line{
+        display: block;
+    }
+    .container-parties{
+        width: 90%;
+    }
+    .info-bar{
+        margin: auto;
+        font-weight: bold;
+        display:block;
+        width: 90%;
+        padding: 40px;
+        justify-content: space-between;
+        box-shadow: 0 4px 8px 0 rgba(249, 177, 101, 0.2), 0 6px 20px 0 rgba(249, 177, 101, 0.2);
+        vertical-align: middle;
+    }
 }
