--- a/client/css/login.css
+++ b/client/css/login.css
@@ -135,6 +135,12 @@ button {
   .linktoregister{
       text-align: center;
   }
+  .linklog{
+      color: orange;
+  }
+  .linklog:hover{
+    color:red;
+}
 
 
   @media only screen and (max-width: 870px) {
