--- a/client/css/register.css
+++ b/client/css/register.css
@@ -24,9 +24,10 @@ body{
     background-color: white;
     border-radius: 25px;
     width: 30%;
-    padding: 10px;
+    height: 40%;
+    padding: 5px;
     margin: auto;
-    margin-top: 5%;
+    margin-top: 10px;
 }
 
 .line{
@@ -93,7 +94,7 @@ button {
     #pan{
         background-color: white;
         border-radius: 25px;
-        width: 60%;
+        width:70%;
         padding: 10px;
         margin: auto;
         margin-top: 20px;
