--- a/client/css/login.css
+++ b/client/css/login.css
@@ -2,7 +2,9 @@
     SFONDO
 ************/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
+[v-cloak] {
+    display: none;
+  }
 body{
     width: 100%; height: 100%;
     background: url( ../image/login.jpeg) no-repeat center top;
