--- a/client/css/register.css
+++ b/client/css/register.css
@@ -2,7 +2,10 @@
     SFONDO
 ************/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
+[v-cloak] {
+    display: none;
+  }
+  
 body{
     width: 100%; height: 100%;
     background: url( ../image/register.jpeg) no-repeat center top;
@@ -17,6 +20,7 @@ body{
     background-attachment: fixed;
     margin:0px;
     padding:0px;
+    font-family: 'Roboto', sans-serif;
 }
 
 
